<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/littlePur"

    android:id="@+id/content_requestor_contact"
    android:fitsSystemWindows="true"
    tools:context="edu.ucsd.cse110.ucsandeliever.requestor_contactActivity">


    <Button
        android:text="I have received the order"
        android:layout_height="45dp"
        android:id="@+id/buttonReceived"
        android:layout_marginBottom="71dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="225dp" />

    <TextView
        android:text="Your orders are on the way!"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:layout_marginTop="76dp"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="contact the runner"
        android:id="@+id/buttonContRunner"
        android:layout_alignBottom="@+id/buttonReceived"
        android:layout_alignLeft="@+id/buttonReceived"
        android:layout_alignStart="@+id/buttonReceived"
        android:layout_marginBottom="83dp"
        android:layout_alignRight="@+id/buttonReceived"
        android:layout_alignEnd="@+id/buttonReceived"
        android:layout_height="45dp"
        android:layout_width="225dp" />

    <TextView
        android:text="Order Informatiom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView14"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/textView28" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView39"
        android:layout_alignBaseline="@+id/textView36"
        android:layout_alignBottom="@+id/textView36"
        android:layout_alignLeft="@+id/textView38"
        android:layout_alignStart="@+id/textView38" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView40"
        android:layout_below="@+id/textView39"
        android:layout_alignLeft="@+id/textView39"
        android:layout_alignStart="@+id/textView39"
        android:layout_marginTop="36dp" />

    <TextView
        android:text="Destination:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView34"
        android:layout_alignBaseline="@+id/textView38"
        android:layout_alignBottom="@+id/textView38"
        android:layout_alignLeft="@+id/buttonContRunner"
        android:layout_alignStart="@+id/buttonContRunner" />

    <TextView
        android:text="Restaurant:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView36"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView34"
        android:layout_alignLeft="@+id/textView34"
        android:layout_alignStart="@+id/textView34" />

    <TextView
        android:text="Item:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView35"
        android:layout_alignBaseline="@+id/textView40"
        android:layout_alignBottom="@+id/textView40"
        android:layout_alignLeft="@+id/textView36"
        android:layout_alignStart="@+id/textView36" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView38"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView28"
        android:layout_alignRight="@+id/buttonContRunner"
        android:layout_alignEnd="@+id/buttonContRunner" />

</RelativeLayout>
