<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_requestor_finish"
    android:background="@color/littlePur"

    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >

    <TextView
        android:text="Thank you for using UC Student Delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="207dp"
        android:id="@+id/textView12"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
