<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@color/white"
        android:dividerHeight="@dimen/pad_5dp"
        android:fastScrollEnabled="true"
        android:paddingBottom="@dimen/pad_10dp"
        android:paddingTop="@dimen/pad_10dp"
        tools:listitem="@layout/chat_item_rcv" >
    </ListView>

   <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_light"
    android:gravity="center_vertical"
    android:padding="@dimen/pad_5dp"
    tools:context=".MainActivity"
       android:weightSum="1">

    
    <EditText
        android:id="@+id/txt"
        style="@style/edittext_msg"
        android:layout_width="306dp"
        android:layout_height="47dp"
        android:hint="@string/type_msg" >

        
    </EditText>

    <Button
        android:id="@+id/btnSend"
        style="@style/btn"
        android:layout_width="33dp"
        android:layout_height="35dp"
        android:background="@drawable/ic_send"
        android:layout_weight="0.32" />

</LinearLayout>

</LinearLayout>