<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="View Orders" />

        <item
            android:id="@+id/nav_request"
            android:icon="@android:drawable/ic_input_add"
            android:title="Request A Delivery" />



        <item
            android:id="@+id/order_history_layout"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="Order History" />


        <item
            android:id="@+id/Account"
            android:icon="@android:drawable/ic_secure"
            android:title="Balance" />
        <item
            android:id="@+id/Orderstatus"
            android:title="Order Status"
            android:icon="@drawable/ic_menu_send" />
        <item
            android:id="@+id/log_out"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="log out" />


    </group>

</menu>
